Make links start with /gds-way/

--- a/source/partials/_nav-logging-monitoring-alerting.html.erb
+++ b/source/partials/_nav-logging-monitoring-alerting.html.erb
@@ -1,7 +1,7 @@
 <ul>
-  <li><a href="/standards/logging.html">Store and query logs</a></li>
-  <li><a href="/standards/monitoring.html">How to monitor your service</a></li>
-  <li><a href="/standards/alerting.html">How to manage alerts</a></li>
-  <li><a href="/standards/slo.html">Make data-driven decisions with Service Level Objectives (SLOs)</a></li>
-  <li><a href="/standards/slis.html">Run a Service Level Indicator (SLI) workshop</a></li>
+  <li><a href="/gds-way/standards/logging.html">Store and query logs</a></li>
+  <li><a href="/gds-way/standards/monitoring.html">How to monitor your service</a></li>
+  <li><a href="/gds-way/standards/alerting.html">How to manage alerts</a></li>
+  <li><a href="/gds-way/standards/slo.html">Make data-driven decisions with Service Level Objectives (SLOs)</a></li>
+  <li><a href="/gds-way/standards/slis.html">Run a Service Level Indicator (SLI) workshop</a></li>
 </ul>
