--- a/source/partials/_nav-operating-a-service.html.erb
+++ b/source/partials/_nav-operating-a-service.html.erb
@@ -1,17 +1,17 @@
 <ul>
-  <li><a href="/standards/understanding-risks.html">Understand the risks to your service</a></li>
-  <li><a href="/standards/technical-debt.html">How to track technical debt</a></li>
-  <li><a href="/standards/accounts-with-third-parties.html">How to manage access to your third-party service accounts</a></li>
-  <li><a href="/standards/storing-credentials.html">How to store credentials</a></li>
-  <li><a href="/standards/how-to-do-penetration-tests.html">How to do penetration testing</a></li>
-  <li><a href="/standards/performance-testing.html">Performance testing</a></li>
-  <li><a href="/standards/sending-email.html">How to send email notifications</a></li>
-  <li><a href="/standards/user-support.html">How GDS provides user support</a></li>
-  <li><a href="/standards/incident-management.html">Incident management</a></li>
-  <li><a href="/standards/disaster-recovery.html">Disaster Recovery</a></li>
-  <li><a href="/standards/principle-least-access.html">Principle of least privilege</a></li>
-  <li><a href="/standards/secrets-acl.html">Tracking access control</a></li>
-  <li><a href="/standards/secrets-auditing.html">Secret auditing</a></li>
-  <li><a href="/standards/pre-commit-hooks.html">Git pre-commit</a></li>
-  <li><a href="/standards/vulnerability-disclosure.html">Vulnerability disclosure and security.txt</a></li>
+  <li><a href="/gds-way/standards/understanding-risks.html">Understand the risks to your service</a></li>
+  <li><a href="/gds-way/standards/technical-debt.html">How to track technical debt</a></li>
+  <li><a href="/gds-way/standards/accounts-with-third-parties.html">How to manage access to your third-party service accounts</a></li>
+  <li><a href="/gds-way/standards/storing-credentials.html">How to store credentials</a></li>
+  <li><a href="/gds-way/standards/how-to-do-penetration-tests.html">How to do penetration testing</a></li>
+  <li><a href="/gds-way/standards/performance-testing.html">Performance testing</a></li>
+  <li><a href="/gds-way/standards/sending-email.html">How to send email notifications</a></li>
+  <li><a href="/gds-way/standards/user-support.html">How GDS provides user support</a></li>
+  <li><a href="/gds-way/standards/incident-management.html">Incident management</a></li>
+  <li><a href="/gds-way/standards/disaster-recovery.html">Disaster Recovery</a></li>
+  <li><a href="/gds-way/standards/principle-least-access.html">Principle of least privilege</a></li>
+  <li><a href="/gds-way/standards/secrets-acl.html">Tracking access control</a></li>
+  <li><a href="/gds-way/standards/secrets-auditing.html">Secret auditing</a></li>
+  <li><a href="/gds-way/standards/pre-commit-hooks.html">Git pre-commit</a></li>
+  <li><a href="/gds-way/standards/vulnerability-disclosure.html">Vulnerability disclosure and security.txt</a></li>
 </ul>
