--- a/source/partials/_nav-software-development.html.erb
+++ b/source/partials/_nav-software-development.html.erb
@@ -1,11 +1,11 @@
 <ul>
-  <li><a href="/standards/naming-software-products.html">How to name software products</a></li>
-  <li><a href="/standards/programming-languages.html">Choosing a programming language</a></li>
-  <li><a href="/manuals/programming-languages.html">Style guides</a></li>
-  <li><a href="/standards/tracking-dependencies.html">How to manage third party software dependencies</a></li>
-  <li><a href="/manuals/accessibility.html">Building accessible services</a></li>
-  <li><a href="/manuals/browser-support.html">Supporting different browsers</a></li>
-  <li><a href="/standards/optimise-frontend-perf.html">How to optimise frontend performance</a></li>
-  <li><a href="/standards/architecture-decisions.html">Documenting architecture decisions</a></li>
-  <li><a href="/standards/threat-modelling.html">Anticipate security issues using threat modelling</a></li>
+  <li><a href="/gds-way/standards/naming-software-products.html">How to name software products</a></li>
+  <li><a href="/gds-way/standards/programming-languages.html">Choosing a programming language</a></li>
+  <li><a href="/gds-way/manuals/programming-languages.html">Style guides</a></li>
+  <li><a href="/gds-way/standards/tracking-dependencies.html">How to manage third party software dependencies</a></li>
+  <li><a href="/gds-way/manuals/accessibility.html">Building accessible services</a></li>
+  <li><a href="/gds-way/manuals/browser-support.html">Supporting different browsers</a></li>
+  <li><a href="/gds-way/standards/optimise-frontend-perf.html">How to optimise frontend performance</a></li>
+  <li><a href="/gds-way/standards/architecture-decisions.html">Documenting architecture decisions</a></li>
+  <li><a href="/gds-way/standards/threat-modelling.html">Anticipate security issues using threat modelling</a></li>
 </ul>
