--- a/source/partials/_nav-version-control-deployments.html.erb
+++ b/source/partials/_nav-version-control-deployments.html.erb
@@ -1,8 +1,8 @@
 <ul>
-  <li><a href="/standards/source-code/">How to store source code</a></li>
-  <li><a href="/standards/pull-requests.html">Using Pull Requests</a></li>
-  <li><a href="/manuals/readme-guidance.html">Writing READMEs</a></li>
-  <li><a href="/manuals/release-notes.html">Writing release notes</a></li>
-  <li><a href="/manuals/licensing.html">Licensing</a></li>
-  <li><a href="/standards/continuous-delivery.html">Use continuous delivery</a></li>
+  <li><a href="/gds-way/standards/source-code/">How to store source code</a></li>
+  <li><a href="/gds-way/standards/pull-requests.html">Using Pull Requests</a></li>
+  <li><a href="/gds-way/manuals/readme-guidance.html">Writing READMEs</a></li>
+  <li><a href="/gds-way/manuals/release-notes.html">Writing release notes</a></li>
+  <li><a href="/gds-way/manuals/licensing.html">Licensing</a></li>
+  <li><a href="/gds-way/standards/continuous-delivery.html">Use continuous delivery</a></li>
 </ul>
